src/Domain/Compiler/Tests/Expression/BinaryExpression/NonSupportedTypes/__Baselines__/BinaryExpression_NonSupportedTypes_Left-StashIr.error
error: Type 'bool' and 's32 1' are not binary operable.
--> main.hs:7:16
  | 
7 |         return true + 1;}}
  |                ^^^^^^^^
